update centralized model

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ILoveCoder999/FederatedLearning/blob/master/centralizedModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -73,7 +73,7 @@
         "    def __init__(self, num_classes=100, dropout_rate=0.1):\n",
         "        \"\"\"\n",
         "        DINO ViT-S/16 model for CIFAR-100 classification.\n",
-        "        \n",
+        "\n",
         "        Args:\n",
         "            num_classes: Number of output classes (100 for CIFAR-100)\n",
         "            dropout_rate: Dropout probability for regularization\n",
@@ -204,11 +204,11 @@
         "# ============================================================\n",
         "# 4. Checkpointing Functions\n",
         "# ============================================================\n",
-        "def save_checkpoint(epoch, model, optimizer, scheduler, best_acc, history, \n",
+        "def save_checkpoint(epoch, model, optimizer, scheduler, best_acc, history,\n",
         "                   checkpoint_dir='checkpoints', filename='checkpoint.pth'):\n",
         "    \"\"\"\n",
         "    Save training checkpoint.\n",
-        "    \n",
+        "\n",
         "    Args:\n",
         "        epoch: Current epoch number\n",
         "        model: Model state\n",
@@ -221,7 +221,7 @@
         "    \"\"\"\n",
         "    os.makedirs(checkpoint_dir, exist_ok=True)\n",
         "    checkpoint_path = os.path.join(checkpoint_dir, filename)\n",
-        "    \n",
+        "\n",
         "    torch.save({\n",
         "        'epoch': epoch,\n",
         "        'model_state_dict': model.state_dict(),\n",
@@ -230,20 +230,20 @@
         "        'best_acc': best_acc,\n",
         "        'history': history\n",
         "    }, checkpoint_path)\n",
-        "    \n",
+        "\n",
         "    print(f\"Checkpoint saved to {checkpoint_path}\")\n",
         "\n",
         "\n",
         "def load_checkpoint(checkpoint_path, model, optimizer=None, scheduler=None):\n",
         "    \"\"\"\n",
         "    Load training checkpoint.\n",
-        "    \n",
+        "\n",
         "    Args:\n",
         "        checkpoint_path: Path to checkpoint file\n",
         "        model: Model to load state into\n",
         "        optimizer: Optional optimizer to load state into\n",
         "        scheduler: Optional scheduler to load state into\n",
-        "        \n",
+        "\n",
         "    Returns:\n",
         "        start_epoch: Epoch to resume from\n",
         "        best_acc: Best accuracy from checkpoint\n",
@@ -252,18 +252,18 @@
         "    if not os.path.exists(checkpoint_path):\n",
         "        print(f\"No checkpoint found at {checkpoint_path}\")\n",
         "        return 0, 0.0, {'train_loss': [], 'train_acc': [], 'val_loss': [], 'val_acc': []}\n",
-        "    \n",
+        "\n",
         "    print(f\"Loading checkpoint from {checkpoint_path}\")\n",
         "    checkpoint = torch.load(checkpoint_path)\n",
-        "    \n",
+        "\n",
         "    model.load_state_dict(checkpoint['model_state_dict'])\n",
-        "    \n",
+        "\n",
         "    if optimizer is not None:\n",
         "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-        "    \n",
+        "\n",
         "    if scheduler is not None:\n",
         "        scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
-        "    \n",
+        "\n",
         "    return checkpoint['epoch'] + 1, checkpoint['best_acc'], checkpoint['history']\n",
         "\n",
         "\n",
@@ -272,21 +272,21 @@
         "# ============================================================\n",
         "class ExperimentLogger:\n",
         "    \"\"\"Simple logger for tracking experiments\"\"\"\n",
-        "    \n",
+        "\n",
         "    def __init__(self, log_dir='logs', experiment_name=None):\n",
         "        \"\"\"\n",
         "        Initialize experiment logger.\n",
-        "        \n",
+        "\n",
         "        Args:\n",
         "            log_dir: Directory to save logs\n",
         "            experiment_name: Name of experiment (auto-generated if None)\n",
         "        \"\"\"\n",
         "        os.makedirs(log_dir, exist_ok=True)\n",
-        "        \n",
+        "\n",
         "        if experiment_name is None:\n",
         "            timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
         "            experiment_name = f'centralized_{timestamp}'\n",
-        "        \n",
+        "\n",
         "        self.log_file = os.path.join(log_dir, f'{experiment_name}.json')\n",
         "        self.metrics = {\n",
         "            'experiment_name': experiment_name,\n",
@@ -294,11 +294,11 @@
         "            'hyperparameters': {},\n",
         "            'epochs': []\n",
         "        }\n",
-        "    \n",
+        "\n",
         "    def log_hyperparameters(self, hparams):\n",
         "        \"\"\"Log hyperparameters\"\"\"\n",
         "        self.metrics['hyperparameters'] = hparams\n",
-        "    \n",
+        "\n",
         "    def log_epoch(self, epoch, train_loss, train_acc, val_loss, val_acc, lr):\n",
         "        \"\"\"Log metrics for one epoch\"\"\"\n",
         "        self.metrics['epochs'].append({\n",
@@ -309,14 +309,14 @@
         "            'val_acc': val_acc,\n",
         "            'learning_rate': lr\n",
         "        })\n",
-        "    \n",
+        "\n",
         "    def log_final_results(self, test_loss, test_acc, total_epochs):\n",
         "        \"\"\"Log final test results\"\"\"\n",
         "        self.metrics['end_time'] = datetime.now().isoformat()\n",
         "        self.metrics['total_epochs'] = total_epochs\n",
         "        self.metrics['test_loss'] = test_loss\n",
         "        self.metrics['test_acc'] = test_acc\n",
-        "    \n",
+        "\n",
         "    def save(self):\n",
         "        \"\"\"Save logs to file\"\"\"\n",
         "        with open(self.log_file, 'w') as f:\n",
@@ -330,12 +330,12 @@
         "def run_centralized_baseline(config=None, seed=42, resume_from=None):\n",
         "    \"\"\"\n",
         "    Main training function with all optimizations and best practices.\n",
-        "    \n",
+        "\n",
         "    Args:\n",
         "        config: Dictionary with hyperparameters (if None, uses defaults)\n",
         "        seed: Random seed for reproducibility\n",
         "        resume_from: Path to checkpoint to resume from\n",
-        "        \n",
+        "\n",
         "    Returns:\n",
         "        test_acc: Final test accuracy\n",
         "        history: Training history\n",
@@ -345,7 +345,7 @@
         "    np.random.seed(seed)\n",
         "    if torch.cuda.is_available():\n",
         "        torch.cuda.manual_seed(seed)\n",
-        "    \n",
+        "\n",
         "    # ========== Hyperparameters ==========\n",
         "    if config is None:\n",
         "        config = {\n",
@@ -358,7 +358,7 @@
         "            'warmup_epochs': 5,\n",
         "            'patience': 10\n",
         "        }\n",
-        "    \n",
+        "\n",
         "    BATCH_SIZE = config['batch_size']\n",
         "    EPOCHS = config['epochs']\n",
         "    LR = config['lr']\n",
@@ -406,15 +406,15 @@
         "    data_builder.train_dataset.dataset.transform = transform_train\n",
         "\n",
         "    train_loader = torch.utils.data.DataLoader(\n",
-        "        data_builder.train_dataset, batch_size=BATCH_SIZE, shuffle=True, \n",
+        "        data_builder.train_dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
         "        num_workers=2, pin_memory=True\n",
         "    )\n",
         "    val_loader = torch.utils.data.DataLoader(\n",
-        "        data_builder.val_dataset, batch_size=BATCH_SIZE, shuffle=False, \n",
+        "        data_builder.val_dataset, batch_size=BATCH_SIZE, shuffle=False,\n",
         "        num_workers=2, pin_memory=True\n",
         "    )\n",
         "    test_loader = torch.utils.data.DataLoader(\n",
-        "        data_builder.test_dataset, batch_size=BATCH_SIZE, shuffle=False, \n",
+        "        data_builder.test_dataset, batch_size=BATCH_SIZE, shuffle=False,\n",
         "        num_workers=2, pin_memory=True\n",
         "    )\n",
         "\n",
@@ -425,17 +425,17 @@
         "\n",
         "    # ========== Model, Optimizer, Loss Function ==========\n",
         "    model = DINOCIFAR100(num_classes=100, dropout_rate=DROPOUT_RATE).to(DEVICE)\n",
-        "    optimizer = optim.SGD(model.parameters(), lr=LR, momentum=MOMENTUM, \n",
+        "    optimizer = optim.SGD(model.parameters(), lr=LR, momentum=MOMENTUM,\n",
         "                         weight_decay=WEIGHT_DECAY)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
-        "    scheduler = get_lr_schedule(optimizer, warmup_epochs=WARMUP_EPOCHS, \n",
+        "    scheduler = get_lr_schedule(optimizer, warmup_epochs=WARMUP_EPOCHS,\n",
         "                               total_epochs=EPOCHS)\n",
         "\n",
         "    # ========== Resume from checkpoint if specified ==========\n",
         "    start_epoch = 0\n",
         "    best_val_acc = 0.0\n",
         "    history = {'train_loss': [], 'train_acc': [], 'val_loss': [], 'val_acc': []}\n",
-        "    \n",
+        "\n",
         "    if resume_from is not None:\n",
         "        start_epoch, best_val_acc, history = load_checkpoint(\n",
         "            resume_from, model, optimizer, scheduler\n",
@@ -456,7 +456,7 @@
         "\n",
         "    for epoch in range(start_epoch, EPOCHS):\n",
         "        # Train for one epoch\n",
-        "        t_loss, t_acc = train_one_epoch(model, train_loader, criterion, \n",
+        "        t_loss, t_acc = train_one_epoch(model, train_loader, criterion,\n",
         "                                       optimizer, DEVICE)\n",
         "\n",
         "        # Validate\n",
@@ -495,8 +495,8 @@
         "\n",
         "        # Save periodic checkpoint (every 10 epochs)\n",
         "        if (epoch + 1) % 10 == 0:\n",
-        "            save_checkpoint(epoch, model, optimizer, scheduler, best_val_acc, \n",
-        "                          history, checkpoint_dir, \n",
+        "            save_checkpoint(epoch, model, optimizer, scheduler, best_val_acc,\n",
+        "                          history, checkpoint_dir,\n",
         "                          f'checkpoint_epoch{epoch+1}_seed{seed}.pth')\n",
         "\n",
         "        # Stop training if no improvement for PATIENCE epochs\n",
@@ -508,11 +508,11 @@
         "    print(f\"\\n{'='*60}\")\n",
         "    print(\"Training completed! Loading best model for testing...\")\n",
         "    print(f\"{'='*60}\\n\")\n",
-        "    \n",
+        "\n",
         "    model.load_state_dict(torch.load(best_model_path))\n",
         "    test_loss, test_acc = evaluate(model, test_loader, criterion, DEVICE)\n",
-        "    \n",
-        "    print(f\"🎯 Final Results:\")\n",
+        "\n",
+        "    print(f\" Final Results:\")\n",
         "    print(f\"   Best Validation Accuracy: {best_val_acc:.2f}%\")\n",
         "    print(f\"   Test Accuracy: {test_acc:.2f}%\")\n",
         "    print(f\"   Test Loss: {test_loss:.4f}\")\n",
@@ -533,40 +533,40 @@
         "def run_multiple_experiments(num_runs=3, config=None):\n",
         "    \"\"\"\n",
         "    Run multiple experiments with different random seeds.\n",
-        "    \n",
+        "\n",
         "    Args:\n",
         "        num_runs: Number of independent runs\n",
         "        config: Hyperparameter configuration\n",
-        "        \n",
+        "\n",
         "    Returns:\n",
         "        results: List of test accuracies from each run\n",
         "    \"\"\"\n",
         "    print(f\"\\n{'='*60}\")\n",
         "    print(f\"Running {num_runs} independent experiments\")\n",
         "    print(f\"{'='*60}\\n\")\n",
-        "    \n",
+        "\n",
         "    results = []\n",
-        "    \n",
+        "\n",
         "    for run in range(num_runs):\n",
         "        seed = 42 + run\n",
         "        print(f\"\\n{'#'*60}\")\n",
         "        print(f\"# RUN {run+1}/{num_runs} (seed={seed})\")\n",
         "        print(f\"{'#'*60}\\n\")\n",
-        "        \n",
+        "\n",
         "        test_acc, _ = run_centralized_baseline(config=config, seed=seed)\n",
         "        results.append(test_acc)\n",
-        "    \n",
+        "\n",
         "    # Calculate statistics\n",
         "    mean_acc = np.mean(results)\n",
         "    std_acc = np.std(results)\n",
-        "    \n",
+        "\n",
         "    print(f\"\\n{'='*60}\")\n",
         "    print(f\"FINAL RESULTS (across {num_runs} runs)\")\n",
         "    print(f\"{'='*60}\")\n",
         "    print(f\"Test Accuracy: {mean_acc:.2f}% ± {std_acc:.2f}%\")\n",
         "    print(f\"Individual runs: {[f'{acc:.2f}%' for acc in results]}\")\n",
         "    print(f\"{'='*60}\\n\")\n",
-        "    \n",
+        "\n",
         "    # Save aggregated results\n",
         "    os.makedirs('logs', exist_ok=True)\n",
         "    with open('logs/multiple_runs_summary.json', 'w') as f:\n",
@@ -577,7 +577,7 @@
         "            'std': std_acc,\n",
         "            'config': config\n",
         "        }, f, indent=2)\n",
-        "    \n",
+        "\n",
         "    return results\n",
         "\n",
         "\n",
@@ -588,7 +588,7 @@
         "    \"\"\"\n",
         "    Perform hyperparameter search over common parameters.\n",
         "    This is a simple grid search - you can expand it as needed.\n",
-        "    \n",
+        "\n",
         "    Returns:\n",
         "        best_config: Best hyperparameter configuration\n",
         "        all_results: Results from all configurations\n",
@@ -596,14 +596,14 @@
         "    print(f\"\\n{'='*60}\")\n",
         "    print(\"HYPERPARAMETER SEARCH\")\n",
         "    print(f\"{'='*60}\\n\")\n",
-        "    \n",
+        "\n",
         "    # Define search space (simplified for demonstration)\n",
         "    search_space = {\n",
         "        'lr': [0.0001, 0.0005, 0.001],\n",
         "        'batch_size': [64, 128],\n",
         "        'weight_decay': [1e-4, 5e-4]\n",
         "    }\n",
-        "    \n",
+        "\n",
         "    # Base configuration\n",
         "    base_config = {\n",
         "        'epochs': 30,  # Reduced for search\n",
@@ -612,11 +612,11 @@
         "        'warmup_epochs': 5,\n",
         "        'patience': 10\n",
         "    }\n",
-        "    \n",
+        "\n",
         "    all_results = []\n",
         "    best_acc = 0\n",
         "    best_config = None\n",
-        "    \n",
+        "\n",
         "    # Grid search\n",
         "    for lr in search_space['lr']:\n",
         "        for batch_size in search_space['batch_size']:\n",
@@ -627,20 +627,20 @@
         "                    'batch_size': batch_size,\n",
         "                    'weight_decay': weight_decay\n",
         "                })\n",
-        "                \n",
+        "\n",
         "                print(f\"\\nTesting config: LR={lr}, BS={batch_size}, WD={weight_decay}\")\n",
         "                test_acc, _ = run_centralized_baseline(config=config, seed=42)\n",
-        "                \n",
+        "\n",
         "                all_results.append({\n",
         "                    'config': config,\n",
         "                    'test_acc': test_acc\n",
         "                })\n",
-        "                \n",
+        "\n",
         "                if test_acc > best_acc:\n",
         "                    best_acc = test_acc\n",
         "                    best_config = config\n",
         "                    print(f\"✓ New best config! Acc={test_acc:.2f}%\")\n",
-        "    \n",
+        "\n",
         "    # Save search results\n",
         "    with open('logs/hyperparameter_search.json', 'w') as f:\n",
         "        json.dump({\n",
@@ -648,7 +648,7 @@
         "            'best_acc': best_acc,\n",
         "            'all_results': all_results\n",
         "        }, f, indent=2)\n",
-        "    \n",
+        "\n",
         "    print(f\"\\n{'='*60}\")\n",
         "    print(\"HYPERPARAMETER SEARCH COMPLETE\")\n",
         "    print(f\"{'='*60}\")\n",
@@ -657,7 +657,7 @@
         "        print(f\"  {key}: {value}\")\n",
         "    print(f\"Best test accuracy: {best_acc:.2f}%\")\n",
         "    print(f\"{'='*60}\\n\")\n",
-        "    \n",
+        "\n",
         "    return best_config, all_results\n",
         "\n",
         "\n",
@@ -673,7 +673,7 @@
         "        save_path: Optional path to save figure\n",
         "    \"\"\"\n",
         "    os.makedirs('figures', exist_ok=True)\n",
-        "    \n",
+        "\n",
         "    epochs = range(1, len(history['train_loss']) + 1)\n",
         "\n",
         "    fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
@@ -695,19 +695,19 @@
         "    axes[1].set_ylabel('Accuracy (%)', fontsize=12)\n",
         "    axes[1].legend(fontsize=11)\n",
         "    axes[1].grid(True, alpha=0.3)\n",
-        "    \n",
+        "\n",
         "    # Add best validation accuracy marker\n",
         "    best_val_idx = np.argmax(history['val_acc'])\n",
         "    best_val_acc = history['val_acc'][best_val_idx]\n",
-        "    axes[1].axvline(x=best_val_idx+1, color='green', linestyle='--', \n",
+        "    axes[1].axvline(x=best_val_idx+1, color='green', linestyle='--',\n",
         "                   alpha=0.5, label=f'Best: {best_val_acc:.2f}%')\n",
         "    axes[1].legend(fontsize=11)\n",
         "\n",
         "    plt.tight_layout()\n",
-        "    \n",
+        "\n",
         "    if save_path is None:\n",
         "        save_path = 'figures/training_curves.png'\n",
-        "    \n",
+        "\n",
         "    plt.savefig(save_path, dpi=150, bbox_inches='tight')\n",
         "    print(f\"Training curves saved to {save_path}\")\n",
         "    plt.show()\n",
@@ -1450,15 +1450,15 @@
         "    os.makedirs('checkpoints', exist_ok=True)\n",
         "    os.makedirs('logs', exist_ok=True)\n",
         "    os.makedirs('figures', exist_ok=True)\n",
-        "    \n",
+        "\n",
         "    # Option 1: Single run with default config\n",
         "    print(\"Option 1: Single run with default configuration\")\n",
         "    test_acc, history = run_centralized_baseline()\n",
-        "    \n",
+        "\n",
         "    # Option 2: Multiple runs for statistical significance\n",
         "    # print(\"Option 2: Multiple runs for statistical significance\")\n",
         "    # results = run_multiple_experiments(num_runs=3)\n",
-        "    \n",
+        "\n",
         "    # Option 3: Hyperparameter search (commented out - takes time)\n",
         "    # print(\"Option 3: Hyperparameter search\")\n",
         "    # best_config, all_results = hyperparameter_search()\n",
@@ -1470,8 +1470,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "A100",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
