--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "id": "825e3347",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "825e3347",
-        "outputId": "f2983682-1de5-41a6-d8ea-c3b502ce2d13",
+        "outputId": "ffc0cf9a-7d13-4311-c7b0-6aef4bbd1898",
         "vscode": {
           "languageId": "plaintext"
         }
@@ -46,15 +46,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "0f172bdc",
       "metadata": {
         "id": "0f172bdc",
         "vscode": {
           "languageId": "plaintext"
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b81fbb13-7d9f-4339-a353-24f813d8498c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Option 1: Single run with default configuration\n",
+            "\n",
+            "============================================================\n",
+            "Running 3 independent experiments\n",
+            "============================================================\n",
+            "\n",
+            "\n",
+            "############################################################\n",
+            "# RUN 1/3 (seed=42)\n",
+            "############################################################\n",
+            "\n",
+            "Using device: cuda\n",
+            "Random seed: 42\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:03<00:00, 43.7MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Dataset sizes:\n",
+            "  Training: 45000\n",
+            "  Validation: 5000\n",
+            "  Test: 10000\n",
+            "Downloading/Loading DINO ViT-S/16...\n",
+            "Downloading: \"https://github.com/facebookresearch/dino/zipball/main\" to /root/.cache/torch/hub/main.zip\n",
+            "Downloading: \"https://dl.fbaipublicfiles.com/dino/dino_deitsmall16_pretrain/dino_deitsmall16_pretrain.pth\" to /root/.cache/torch/hub/checkpoints/dino_deitsmall16_pretrain.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 82.7M/82.7M [00:00<00:00, 214MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "============================================================\n",
+            "Starting centralized training for 50 epochs...\n",
+            "Hyperparameters: LR=0.0001, Batch=128, WD=0.0005\n",
+            "============================================================\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Training:   2%|▏         | 8/352 [00:11<06:48,  1.19s/it]"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -711,62 +782,7 @@
         "    plt.savefig(save_path, dpi=150, bbox_inches='tight')\n",
         "    print(f\"Training curves saved to {save_path}\")\n",
         "    plt.show()\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "id": "4e41508f",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 574
-        },
-        "id": "4e41508f",
-        "outputId": "7b34f607-117d-4da6-ae16-1cc34aecec6c",
-        "vscode": {
-          "languageId": "plaintext"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Option 1: Single run with default configuration\n",
-            "Using device: cuda\n",
-            "Random seed: 42\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'preprocessing_simple'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-380625015.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# Option 1: Single run with default config\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Option 1: Single run with default configuration\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mtest_acc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_centralized_baseline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Option 2: Multiple runs for statistical significance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-407652389.py\u001b[0m in \u001b[0;36mrun_centralized_baseline\u001b[0;34m(config, seed, resume_from)\u001b[0m\n\u001b[1;32m    342\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    343\u001b[0m     \u001b[0;31m# Load datasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 344\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mpreprocessing_simple\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mFederatedDataBuilder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    345\u001b[0m     \u001b[0mdata_builder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFederatedDataBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_split_ratio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'preprocessing_simple'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ],
-      "source": [
-        "# ============================================================\n",
-        "# 10. Main Entry Point\n",
-        "# ============================================================\n",
+        "\n",
         "if __name__ == \"__main__\":\n",
         "    # Create necessary directories\n",
         "    os.makedirs('checkpoints', exist_ok=True)\n",
@@ -775,16 +791,16 @@
         "\n",
         "    # Option 1: Single run with default config\n",
         "    print(\"Option 1: Single run with default configuration\")\n",
-        "    test_acc, history = run_centralized_baseline()\n",
+        "    #test_acc, history = run_centralized_baseline()\n",
         "\n",
         "    # Option 2: Multiple runs for statistical significance\n",
         "    # print(\"Option 2: Multiple runs for statistical significance\")\n",
-        "    # results = run_multiple_experiments(num_runs=3)\n",
+        "    results = run_multiple_experiments(num_runs=3)\n",
         "\n",
         "    # Option 3: Hyperparameter search (commented out - takes time)\n",
         "    # print(\"Option 3: Hyperparameter search\")\n",
         "    # best_config, all_results = hyperparameter_search()\n",
-        "    # print(f\"Best config: {best_config}\")"
+        "    # print(f\"Best config: {best_config}\")\n"
       ]
     }
   ],
