使用 Colab 创建而成

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "id": "825e3347",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "825e3347",
-        "outputId": "ffc0cf9a-7d13-4311-c7b0-6aef4bbd1898",
+        "outputId": "d073dec3-e716-4dab-9ee9-6bbddbbeee49",
         "vscode": {
           "languageId": "plaintext"
         }
@@ -56,7 +56,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b81fbb13-7d9f-4339-a353-24f813d8498c"
+        "outputId": "53dc0cef-13ff-4a8a-f9f6-966700709329"
       },
       "outputs": [
         {
@@ -82,7 +82,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 169M/169M [00:03<00:00, 43.7MB/s]\n"
+            "100%|██████████| 169M/169M [00:13<00:00, 12.4MB/s]\n"
           ]
         },
         {
@@ -103,7 +103,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 82.7M/82.7M [00:00<00:00, 214MB/s]\n"
+            "100%|██████████| 82.7M/82.7M [00:00<00:00, 397MB/s]\n"
           ]
         },
         {
@@ -121,8 +121,141 @@
         {
           "output_type": "stream",
           "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Training:   2%|▏         | 8/352 [00:11<06:48,  1.19s/it]"
+            "✓ Epoch 1/50 | LR: 0.000000 | Train Loss: 8.3379 Acc: 1.13% | Val Loss: 8.0898 Acc: 0.92% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 2/50 | LR: 0.000020 | Train Loss: 4.3348 Acc: 7.87% | Val Loss: 3.0379 Acc: 23.56% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 3/50 | LR: 0.000040 | Train Loss: 2.3585 Acc: 38.08% | Val Loss: 1.5331 Acc: 55.50% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 4/50 | LR: 0.000060 | Train Loss: 1.3070 Acc: 62.22% | Val Loss: 0.9679 Acc: 70.66% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 5/50 | LR: 0.000080 | Train Loss: 0.8720 Acc: 73.76% | Val Loss: 0.7811 Acc: 76.26% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 6/50 | LR: 0.000100 | Train Loss: 0.6733 Acc: 79.21% | Val Loss: 0.7410 Acc: 78.10% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 7/50 | LR: 0.000100 | Train Loss: 0.5050 Acc: 83.95% | Val Loss: 0.6366 Acc: 81.12% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 8/50 | LR: 0.000100 | Train Loss: 0.3905 Acc: 87.42% | Val Loss: 0.5999 Acc: 82.24% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 9/50 | LR: 0.000099 | Train Loss: 0.3200 Acc: 89.43% | Val Loss: 0.6004 Acc: 83.22% | NEW BEST! ⭐\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Epoch 10/50 | LR: 0.000098 | Train Loss: 0.2603 Acc: 91.30% | Val Loss: 0.6079 Acc: 83.28% | NEW BEST! ⭐\n",
+            "Checkpoint saved to checkpoints/checkpoint_epoch10_seed42.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Epoch 11/50 | LR: 0.000097 | Train Loss: 0.2069 Acc: 92.98% | Val Loss: 0.6571 Acc: 82.54% | No improvement: 1/10\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Training:  44%|████▍     | 155/352 [00:44<00:55,  3.55it/s]"
           ]
         }
       ],
@@ -421,7 +554,7 @@
         "    if config is None:\n",
         "        config = {\n",
         "            'batch_size': 128,\n",
-        "            'epochs': 50,\n",
+        "            'epochs': 30,\n",
         "            'lr': 0.0001,\n",
         "            'momentum': 0.9,\n",
         "            'weight_decay': 5e-4,\n",
@@ -791,7 +924,7 @@
         "\n",
         "    # Option 1: Single run with default config\n",
         "    print(\"Option 1: Single run with default configuration\")\n",
-        "    #test_acc, history = run_centralized_baseline()\n",
+        "    test_acc, history = run_centralized_baseline()\n",
         "\n",
         "    # Option 2: Multiple runs for statistical significance\n",
         "    # print(\"Option 2: Multiple runs for statistical significance\")\n",
@@ -799,7 +932,7 @@
         "\n",
         "    # Option 3: Hyperparameter search (commented out - takes time)\n",
         "    # print(\"Option 3: Hyperparameter search\")\n",
-        "    # best_config, all_results = hyperparameter_search()\n",
+        "    best_config, all_results = hyperparameter_search()\n",
         "    # print(f\"Best config: {best_config}\")\n"
       ]
     }
@@ -807,7 +940,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "A100",
       "provenance": [],
       "include_colab_link": true
     },
