使用 Colab 创建而成

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -2894,7 +2894,7 @@
         "    if config is None:\n",
         "        config = {\n",
         "            'batch_size': 128,\n",
-        "            'epochs': 30,\n",
+        "            'epochs': 50,\n",
         "            'lr': 0.0001,\n",
         "            'momentum': 0.9,\n",
         "            'weight_decay': 5e-4,\n",
@@ -3280,7 +3280,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "T4",
       "provenance": [],
       "include_colab_link": true
     },
