使用 Colab 创建而成

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -2600,6 +2600,7 @@
         }
       ],
       "source": [
+        "%%writefile /content/drive/MyDrive/preprocessing.py/centralized_model.py\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
