把ipynb文件转为.py文件

--- a/fed_avg_non_iid.ipynb
+++ b/fed_avg_non_iid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "170ae2e9",
    "metadata": {},
    "outputs": [
@@ -10,68 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "Loading DINO backbone (ONE TIME ONLY)...\n",
-      "======================================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in /Users/van/.cache/torch/hub/facebookresearch_dino_main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ DINO backbone loaded and cached globally\n",
-      "======================================================================\n",
-      "\n",
-      "    ╔════════════════════════════════════════════════════════════════╗\n",
-      "    ║     FedAvg with Non-IID Data Distribution                      ║\n",
-      "    ║                                                                ║\n",
-      "    ║  Configuration:                                                ║\n",
-      "    ║  - K=100 clients, C=0.1 sampling (10 clients/round)          ║\n",
-      "    ║  - J=4 local steps (fixed)                                    ║\n",
-      "    ║  - Rounds=100 (fixed)                                         ║\n",
-      "    ║  - Nc ∈ {1, 5, 10, 50} classes per client                     ║\n",
-      "    ║                                                                ║\n",
-      "    ║  Total experiments: 4 (one for each Nc value)                 ║\n",
-      "    ║  Estimated time: 2-3 hours on T4 GPU                          ║\n",
-      "    ╚════════════════════════════════════════════════════════════════╝\n",
-      "    \n",
-      "Creating data builder (will be reused for all experiments)...\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "\n",
-      "======================================================================\n",
-      "EXPERIMENT: Non-IID Nc=1, J=4, Rounds=200\n",
-      "======================================================================\n",
-      "\n",
-      "======================================================================\n",
-      "FedAvg Experiment: Non-IID (Nc=1), J=4\n",
-      "======================================================================\n",
-      "K=100, C=0.1, J=4, Rounds=200, LR=0.04\n",
-      "Device: cpu\n",
-      "======================================================================\n",
-      "\n"
+      "Writing fed_avg_non_iid.py\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "FedAvg with Non-IID Data Distribution\n",
-    "======================================\n",
-    "Implements experiments required by the project:\n",
-    "- Nc ∈ {1, 5, 10, 50} (classes per client)\n",
-    "- J ∈ {4, 8, 16} (local steps)\n",
-    "- K=100, C=0.1 (100 clients, 10% sampling)\n",
-    "\n",
-    "Based on project specification page 3-4.\n",
-    "\"\"\"\n",
-    "\n",
+    "%%writefile fed_avg_non_iid.py\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
