--- a/taskArithmetic.ipynb
+++ b/taskArithmetic.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "163c930a",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing taskarithmetic.py\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "%%writefile /content/drive/MyDrive/taskarithmetic.py\n",
+    "%%writefile taskarithmetic.py\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -233,8 +237,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "AdvancedMachingLearning",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
