all file finished

--- a/taskArithmetic.ipynb
+++ b/taskArithmetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "163c930a",
    "metadata": {},
    "outputs": [
@@ -231,6 +231,46 @@
     "        for p, score in sensitivity_scores.items():\n",
     "            mask = (score >= threshold).float()\n",
     "            masks[p] = mask\n",
+    "            \n",
+    "    return masks\n",
+    "\n",
+    "    def calibrate_masks_extended(model, strategy='least_sensitive', sparsity_ratio=0.1, sensitivity_scores=None):\n",
+    "    \"\"\"\n",
+    "    实现项目第4部分的扩展功能：多种梯度掩码校准规则 [cite: 77]\n",
+    "    \"\"\"\n",
+    "    masks = {}\n",
+    "    params = [p for p in model.parameters() if p.requires_grad]\n",
+    "    \n",
+    "    # 1. 获取所有待评估的分数\n",
+    "    if strategy in ['least_sensitive', 'most_sensitive']:\n",
+    "        all_values = torch.cat([s.view(-1) for s in sensitivity_scores.values()])\n",
+    "    elif strategy in ['low_magnitude', 'high_magnitude']:\n",
+    "        all_values = torch.cat([p.data.abs().view(-1) for p in params])\n",
+    "    elif strategy == 'random':\n",
+    "        all_values = torch.cat([torch.rand_like(p).view(-1) for p in params])\n",
+    "\n",
+    "    # 2. 计算阈值\n",
+    "    k = int(all_values.numel() * sparsity_ratio)\n",
+    "    \n",
+    "    if strategy in ['least_sensitive', 'low_magnitude']:\n",
+    "        threshold = torch.kthvalue(all_values, k).values.item()\n",
+    "    elif strategy in ['most_sensitive', 'high_magnitude']:\n",
+    "        threshold = torch.kthvalue(all_values, all_values.numel() - k).values.item()\n",
+    "    else: # random\n",
+    "        threshold = torch.kthvalue(all_values, k).values.item()\n",
+    "\n",
+    "    # 3. 生成掩码\n",
+    "    for p in params:\n",
+    "        if strategy == 'least_sensitive':\n",
+    "            masks[p] = (sensitivity_scores[p] <= threshold).float()\n",
+    "        elif strategy == 'most_sensitive':\n",
+    "            masks[p] = (sensitivity_scores[p] >= threshold).float()\n",
+    "        elif strategy == 'low_magnitude':\n",
+    "            masks[p] = (p.data.abs() <= threshold).float()\n",
+    "        elif strategy == 'high_magnitude':\n",
+    "            masks[p] = (p.data.abs() >= threshold).float()\n",
+    "        elif strategy == 'random':\n",
+    "            masks[p] = (torch.rand_like(p) <= (k/all_values.numel())).float()\n",
     "            \n",
     "    return masks"
    ]
