使用 Colab 创建而成

--- a/fed_avg_non_iid.ipynb
+++ b/fed_avg_non_iid.ipynb
@@ -2,6 +2,25 @@
   "cells": [
     {
       "cell_type": "code",
+      "source": [
+        "# mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# import module\n",
+        "import sys\n",
+        "sys.path.append('/content/drive/MyDrive')\n",
+        "from preprocessing import FederatedDataBuilder"
+      ],
+      "metadata": {
+        "id": "JY9J0FzKZIde"
+      },
+      "id": "JY9J0FzKZIde",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "170ae2e9",
       "metadata": {
@@ -18,7 +37,7 @@
         }
       ],
       "source": [
-        "%%writefile fed_avg_non_iid.py\n",
+        "%%writefile /content/drive/MyDrive/fed_avg_non_iid.py\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -563,25 +582,6 @@
         "    print(\"  - Nc=50 (mild Non-IID): Highest accuracy\")\n",
         "    print(\"  - Clear trend: More heterogeneous data → Lower performance\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# mount Google Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# import module\n",
-        "import sys\n",
-        "sys.path.append('/content/drive/MyDrive')\n",
-        "from preprocessing import FederatedDataBuilder"
-      ],
-      "metadata": {
-        "id": "JY9J0FzKZIde"
-      },
-      "id": "JY9J0FzKZIde",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
